fixed checkout button oversized on mobile

--- a/src/Assets/Styles/SingleProductPage.css
+++ b/src/Assets/Styles/SingleProductPage.css
@@ -46,6 +46,7 @@
     margin: 5px;
     padding: 6px;
     width: 160px;
+    max-width: 100%;
     border: 1px solid rgba(190,190,190,0.5);
     border-radius: 5px;
     background-color: rgba(0,0,0,0.4);
